--- a/ElectronicForm.html
+++ b/ElectronicForm.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>New Application Passport</title>
+    <title>
+      New Application Passport</title>
   </head>
   <body>
     <form class="" action="mailto:posiojl@students.national-u.edu.ph"email me" method="post"enctype="text/plain">
@@ -10,7 +11,7 @@
       <label>APPONTMENT VERIFICATION:</label><br>
       <input type="text" name="APPONTMENT VERIFICATION:" value=""><br>
       <label>REMARKS</label><br>
-      <input type="text" name="REMARKS" value=""><br><br>
+      <input type="text" name="REMARKS:" value=""><br><br>
     <fieldset>
       <legend>PASSPORT APPLICANT’S INFORMATION</legend>
     <fieldset>
