--- a/ElectronicForm.html
+++ b/ElectronicForm.html
@@ -2,18 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>
-      New Application Passport</title>
+    <title>New Application Passport</title>
   </head>
   <body>
     <form class="" action="mailto:posiojl@students.national-u.edu.ph"email me" method="post"enctype="text/plain">
     <fieldset>
       <label>APPONTMENT VERIFICATION:</label><br>
       <input type="text" name="APPONTMENT VERIFICATION:" value=""><br>
+      <left>
       <label>REMARKS</label><br>
       <input type="text" name="REMARKS:" value=""><br><br>
+      </left>
     <fieldset>
-      <legend>PASSPORT APPLICANT’S INFORMATION</legend>
+      <legend><center>PASSPORT APPLICANT’S INFORMATION</legend></center>
     <fieldset>
       <label>Last Name</label><br>
       <input type="text" name="Last Name" value=""><br>
