--- a/ElectronicForm.html
+++ b/ElectronicForm.html
@@ -9,12 +9,10 @@
     <fieldset>
       <label>APPONTMENT VERIFICATION:</label><br>
       <input type="text" name="APPONTMENT VERIFICATION:" value=""><br>
-      <left>
-      <label>REMARKS</label><br>
-      <input type="text" name="REMARKS:" value=""><br><br>
-      </left>
+      <label>REMARKS:</label><br>
+      <input type="text" name="REMARKS" value=""><br><br>
     <fieldset>
-      <legend><center>PASSPORT APPLICANT’S INFORMATION</legend></center>
+      <legend>PASSPORT APPLICANT’S INFORMATION</legend>
     <fieldset>
       <label>Last Name</label><br>
       <input type="text" name="Last Name" value=""><br>
