--- a/ElectronicForm.html
+++ b/ElectronicForm.html
@@ -8,7 +8,7 @@
     <form class="" action="mailto:posiojl@students.national-u.edu.ph"email me" method="post"enctype="text/plain">
     <fieldset>
       <label>APPONTMENT VERIFICATION:</label><br>
-      <input type="text" name="APPONTMENT VERIFICATION:" value=""><br>
+      <input type="text" name="APPONTMENT VERIFICATION:" value="" align="right"><br>
       <label>REMARKS:</label><br>
       <input type="text" name="REMARKS" value=""><br><br>
     <fieldset>
@@ -93,11 +93,12 @@
         <label>a.HOME ADDRESS:</label><br>
         <input type="text" name="HOME ADDRESS" value=""><br>
         <label>b.PRESENT ADDRESS:</label><br>
-        <input type="text" name="PRESENT ADDRESS" value=""><br>
+        <input type="text" name="PRESENT ADDRESS" value=""><br><br>
+      	<label>WHERE DO YOU WISH YOUR PASSPORT TO BE DELIVERED?</label><br>
         <label>HOME ADDRESS</label>
         <input type="radio" name="HOME ADDRESS" value="HOME ADDRESS">
         <label>PRESENT ADDRESS</label>
-        <input type="radio" name="PRESENT ADDRESS" value="PRESENT ADDRESS"><br>
+        <input type="radio" name="PRESENT ADDRESS" value="PRESENT ADDRESS"><br><br>
         <label>TELEPHONE/MOBILE NUMBER:</label><br>
         <input type="number" name="TELEPHONE/MOBILE NUMBER" value=""><br>
         <label>e-MAIL ADDRRESS</label><br>
